Fixed summary rating arrow width on mobile

--- a/docroot/themes/iucn_who/css/style.css
+++ b/docroot/themes/iucn_who/css/style.css
@@ -11755,12 +11755,6 @@ body.page-node-type-site #sidemenu {
     font-weight: 500;
   }
 }
-@media screen and (max-width: 767px) {
-  .iucn-site-wrapper .conservation-outlook-summary-group {
-    display: inline-flex;
-    flex-direction: column;
-  }
-}
 @media screen and (min-width: 768px) {
   .iucn-site-wrapper .conservation-outlook-summary-group {
     border-left: .4em solid;
