--- a/docroot/themes/iucn_who/less/theme/assessments.less
+++ b/docroot/themes/iucn_who/less/theme/assessments.less
@@ -418,10 +418,10 @@ body.page-node-type-site {
         font-weight: 500;
       }
     }
-    @media @grid-mobile {
-      display: inline-flex;
-      flex-direction: column;
-    }
+    // @media @grid-mobile {
+    //   display: inline-flex;
+    //   flex-direction: column;
+    // }
     @media @grid-desktop {
       .left-bordered-heading();
       padding-bottom: .8em;
